Patch pronto, código melhorado
